Fixed sharing popup position cut off issue

--- a/src/components/Share/styles.module.scss
+++ b/src/components/Share/styles.module.scss
@@ -142,6 +142,11 @@
       left: 0;
     }
 
+    &.popup-position-left {
+      right: 0;
+      left: auto;
+    }
+
     @media (max-width: $screen-sm) {
       left: 10px;
       right: 10px;
